docker add in this code

--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 # DataBase Configurations
 DB_USER=myuser
 DB_PASSWORD=myuser
-DB_HOST=localhost
+DB_HOST=db
 DB_NAME=demo
 
+# Server port
 PORT=5000
 
 # jwt secrete key
