add attendence store api in google sheet

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # DataBase Configurations
 DB_USER=myuser
 DB_PASSWORD=myuser
-DB_HOST=db
+DB_HOST=localhost
 DB_NAME=demo
 
 # Server port
@@ -16,5 +16,4 @@ EMAIL_USER=notifiucationtg@gmail.com
 EMAIL_PASS=ddqfketzqjlibshp
 EMAIL_PORT=587
 EMAIL_FROM=notifiucationtg@gmail.com 
-
 
