--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1",
+    "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.4",
     "nodemailer": "^6.9.1",
