--- a/.env
+++ b/.env
@@ -1,8 +1,6 @@
 # DataBase Configurations
-DB_USER=myuser
-DB_PASSWORD=myuser
-DB_HOST=localhost
-DB_NAME=demo
+DB_PASSWORD=roziroti
+DB_NAME=Rozi-Roti
 
 # Server port
 PORT=5000
