--- a/package.json
+++ b/package.json
@@ -25,10 +25,9 @@
     "express": "^4.18.2",
     "googleapis": "^118.0.0",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.4",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.2.2",
     "nodemailer": "^6.9.1",
-    "nodemon": "^2.0.22",
-    "pg": "^8.10.0",
-    "sequelize": "^6.31.1"
+    "nodemon": "^2.0.22"
   }
 }
